<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="0.0px"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:id="@+id/mainWindowContainerBody" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <RadioGroup android:gravity="center_vertical" android:layout_gravity="bottom" android:orientation="horizontal" android:id="@+id/main_radio" android:background="@drawable/bottom_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RadioButton android:id="@+id/radio_button0" android:layout_marginTop="2.0dip" android:text="@string/main_fund_netvalue" android:drawableTop="@drawable/icon_jjjz" style="@style/main_tab_bottom" />
            <RadioButton android:id="@+id/radio_button1" android:layout_marginTop="2.0dip" android:text="@string/main_zxjj" android:drawableTop="@drawable/icon_zxfund" style="@style/main_tab_bottom" />
            <RadioButton android:id="@+id/radio_button2" android:layout_marginTop="2.0dip" android:text="@string/main_myfund" android:drawableTop="@drawable/icon_myfund" style="@style/main_tab_bottom" />
            <RadioButton android:id="@+id/radio_button3" android:layout_marginTop="2.0dip" android:text="@string/main_news_inform" android:drawableTop="@drawable/icon_news" style="@style/main_tab_bottom" />
            <RadioButton android:id="@+id/radio_button4" android:layout_marginTop="2.0dip" android:text="@string/main_more" android:drawableTop="@drawable/icon_more" style="@style/main_tab_bottom" />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>
